--- a/home.css
+++ b/home.css
@@ -62,6 +62,7 @@ a:hover{
     float: right;
     margin-left: 70px;
     border: 3px double grey;
+    
 }
 
 #hy{
@@ -84,6 +85,7 @@ a:hover{
     text-align: left;
     font-family: sans-serif;
     font-size: 20px;
+    width: 80%;
 }
 
 /* Footer */
@@ -91,6 +93,13 @@ a:hover{
 footer{
     background-color: #FF3B3F;
     border-radius: 120px;
+    margin: auto;
+    width: 80%;
+    border-top: 2px solid #96858F;
+    font-size: 20px;
+    text-align: center;
+    clear: both;
+    font-family: 'Courier New', Courier, monospace;
 }
 footer #rights{
    padding-top: 5px;
@@ -101,6 +110,9 @@ footer #rights p{
     font-size: 12pt;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+
+
 
 /* My Interest */
 
@@ -282,7 +294,7 @@ h2{
 .project {
     font-family: sans-serif;
     margin-top: 10px;
-    margin-left: 150px;
+    margin-left: 138px;
     margin-bottom: 20px;
     width: 90%;
     float: left;
@@ -364,37 +376,11 @@ input[type=submit]:hover {
     transition: 0.5s;
   }
 
-
-
-
-
-
-@media screen and (min-width: 425px){
-    #profile{
-        margin-top: 50px;
-        float: right;
-        margin-left: 70px;
-        border: 3px double grey;
+@media screen and (max-width: 800px){
+    
+    #boxluar .project{
+        margin-left: 100px;
     }
 
-    #container #about{
-        width: 80%;
-        height: auto;
-        background-color: #EFEFEF;
-        margin: 40px auto 20px auto;
-        padding: 60px 0px 100px 25px;
-        text-align: left;
-        font-family: sans-serif;
-        font-size: 20px;
-    }
-
-    footer{
-        margin: auto;
-        width: 80%;
-        border-top: 2px solid #96858F;
-        font-size: 20px;
-        text-align: center;
-        clear: both;
-        font-family: 'Courier New', Courier, monospace;
-    }
+    
 }
