--- a/home.css
+++ b/home.css
@@ -377,7 +377,67 @@ input[type=submit]:hover {
     transition: 0.5s;
   }
 
-@media screen and (max-width: 800px){
-    
-    
-}
+@media  screen and (max-width: 794px) {
+    /* My Interest*/
+    #logo img{
+        width: 20%;
+    }
+
+    #container {
+        width: auto;
+    }
+
+    #judul {
+        margin-top: -13px;
+    }
+
+    #atas{
+        margin-top: -30px;
+    }
+
+    #atas ul{
+        width: auto;
+        margin: auto;
+    }
+
+    #atas a{
+        font-size: 20px;
+    }
+
+    #atas li{
+        margin-bottom: 10px;
+    }
+
+    .pilihan2 {
+        width:100%;
+        text-align: center;
+        clear: both;
+        margin-bottom: 40px;
+    }
+
+    .pilihan2 a{
+        margin-right: 0;
+
+    }
+
+    .pilihan2 img{
+        margin: auto;
+        width: 70%;
+    }
+
+    /* Footer */
+    #rights{
+        width: 100%;
+        background-color: unset;
+    }
+
+    #rights img{
+        
+        width: 15%;
+    }
+    #rights a{
+
+        margin: auto;
+
+    }
+  }
